--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,14 @@ environment:
   sdk: '>=3.2.6 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.15.8
+  firebase_auth: ^4.17.8
+  firebase_core: ^2.27.0
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.5
+  google_sign_in: ^6.2.1
   hexcolor: ^3.0.1
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
